# PDX

./: .gitignore  requirements.txt  setup.py  testJob.txt
benchmarks/: CMakeLists.txt
benchmarks/bench_adsampling/: pdx_ivf_adsampling.cpp
benchmarks/python_scripts/: requirements.txt  setup_adsampling.py  setup_bond.py  setup_core_index.py  setup_ground_truth.py  setup_test_data.py
benchmarks/results/DEFAULT/: IVF_PDX_ADSAMPLING.csv
examples/: pdx_simple.py
